source/stylesheets/pages/_index.sass
body.index
  @import "index/highlights"
  @import "index/speakers"
  @import "index/attendees"
  @import "index/sponsors"
  @import "index/twitter_feed"

  #header
    z-index: 1000

  article
    position: relative

    & > header
      background: white
      position: relative
      margin-top: -1em
      +clearfix

      h2, h3
        +brand-stripe(0, $brand-2, false)
        +custom-serif(bold)
        +no-caps
        padding-left: 1em
        padding-right: 1em

      h2
        z-index: 500
        +at-night
          background: transparentize($brand-2, 0.05)

        span
          display: none

      h3
        font-size: 0.9em
        background: none
        color: $brand-2
        z-index: 400
        margin: 0
        +no-text-shadow

    section.register
      border-bottom: 1px dotted $grey
      background-color: $grey
      +clearfix
      +padded

      a.primary
        background: $brand-1
        +shadowed
        padding: 2px
        display: block
        color: $white
        text-align: center
        +custom-sans(black)
        +transition(all 0.15s)
        +text-shadow(0 1px 0 darken($brand-1, 10%))
        font-size: 1.5em

        span
          padding-bottom: 0.15em
          display: block
          border: 1px dotted transparentize($white, 0.5)

        &:hover
          background-color: $white
          color: $brand-1
          +no-text-shadow

      p
        color: $medium-grey
        margin: 0 0 -0.5em 0
        text-align: center

    .block
      +clearfix
      background: transparentize(white, 0.1)


  +respond-to(smartphone-portrait)
    article
      & > header
        h2, h3
          margin: 0

        h3
          padding-left: 0
          padding-right: 0
          width: 100%
          border-bottom: 1px dotted $brand-2


  +respond-to(smartphone-landscape)
    article
      & > header
        margin-top: 0

        h2, h3
          +transition(all 0.5s)
          +transform(rotate(0deg))
          padding: 0.15em 1em 0.35em

        h2
          +shadowed
          margin-right: 5%

        h3
          margin-left: 15%
          +text-shadow(0 1px 0 darken($brand-2, 10%))
          background: transparentize($brand-2, 0.2)
          color: $white
          border: none
          width: 82%

      section.register
        .wrapper
          width: 50%
          margin-right: auto
          margin-left: auto


  +respond-to(tablet-lite)
    article
      & > header
        h2
          span
            display: inline

          br
            display: none


  +respond-to(tablet-portrait)
    #container
      overflow: hidden

    article
      & > header
        h2
          +shadowed
          margin-left: -1em
          margin-right: -1em
          +transition(all 0.5s)
          +transform(rotate(-2deg))

        h3
          margin-left: 20%
          +transition(all 0.5s)
          +transform(rotate(0.5deg))

      section.register
        .wrapper
          width: 33.33333%



  +respond-to(tablet-landscape)
    article
      & > header
        background: white
        +at-night
          background: $black
          

  +respond-to(tablet-oversize)
    #container
      overflow: visible

